--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=main.html">
   <title>Splash Screen Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -202,7 +201,7 @@
   <div class="splash-title">Mapa de escuelas</div>
   <div class="splash-subtitle">La Plata, Berisso y Ensenada</div>
   <button class="splash-btn" onclick="window.location.href='main.html'">
-    <span class="splash-btn-text">Realiza tu consulta</span>
+    <span class="splash-btn-text">Realice su consulta</span>
   </button>
   <div id="easterEgg" style="display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);width:260px;height:260px;background:#fff;border-radius:50%;box-shadow:0 0 40px 8px #fff8, 0 8px 32px #0006;z-index:2000;align-items:center;justify-content:center;font-family:'CalibriCustom', Arial, sans-serif;color:#222;pointer-events:none;overflow:hidden;">
     <div style="display:grid;place-items:center;box-sizing:border-box;width:92%;height:92%;padding:0 10px;text-align:center;font-weight:bold;font-size:1.7em;letter-spacing:0.6px;gap:10px;line-height:1.2;color:#d0002a;text-shadow:0 2px 10px rgba(0,0,0,0.25),0 1px 4px rgba(255,255,255,0.6);">
